[Java] Upgrade to Agrona 2.0.0.